; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/zram/extr_zram_drv.c_zram_slot_free_notify.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/zram/extr_zram_drv.c_zram_slot_free_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block_device = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.zram* }
%struct.zram = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zram_slot_free_notify(%struct.block_device* %0, i64 %1) #0 {
  %3 = alloca %struct.block_device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.zram*, align 8
  store %struct.block_device* %0, %struct.block_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.block_device*, %struct.block_device** %3, align 8
  %7 = getelementptr inbounds %struct.block_device, %struct.block_device* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.zram*, %struct.zram** %9, align 8
  store %struct.zram* %10, %struct.zram** %5, align 8
  %11 = load %struct.zram*, %struct.zram** %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @zram_free_page(%struct.zram* %11, i64 %12)
  %14 = load %struct.zram*, %struct.zram** %5, align 8
  %15 = load %struct.zram*, %struct.zram** %5, align 8
  %16 = getelementptr inbounds %struct.zram, %struct.zram* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = call i32 @zram_stat64_inc(%struct.zram* %14, i32* %17)
  ret void
}

declare dso_local i32 @zram_free_page(%struct.zram*, i64) #1

declare dso_local i32 @zram_stat64_inc(%struct.zram*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
